# fares-scraper-framework

./: pyproject.toml
fares_scraper/airlines/ryanair/: ryanair.py
fares_scraper/airlines/wizzair/: wizzair.py
fares_scraper/base/: __init__.py  base_scraper.py  config.py  exceptions.py  session_manager.py
